adding all the changes

--- a/bootstart.html
+++ b/bootstart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Starter</title>
+  <title>animalnames</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -14,6 +14,27 @@
 
 </head>
 <body>
+  <h1>Animals by Shashidhar reddy nagireddy</h1>
+  <div class="container">
+    <div class="row">
+        <div class="col-sm-2">N</div>
+        <div class="col-sm-2">A</div>
+        <div class="col-sm-2">G</div>
+        <div class="col-sm-2">I</div>
+        <div class="col-sm-2">R</div>
+        <div class="col-sm-2">E</div>
+    </div>
+    <div class="row">
+        <div class="col-md">Numbat</div>
+        <div class="col-md">Aardvark</div>
+        <div class="col-md">Gecko</div>
+        <div class="col-md">Impala</div>
+        <div class="col-md">Rabbit</div>
+        <div class="col-md">Eagle</div>
+    </div>
+
+    <div> while  resizing it slowly the rows with Animal names break at 767 x 578 px and  the rows which has  Animal letters breaks at 575 x 578 px</div>
+</div>
 
 
 
